[gd_scene load_steps=15 format=2]

[ext_resource path="res://Scripts/NewTask.gd" type="Script" id=1]
[ext_resource path="res://Scenes/RequirementsControl.tscn" type="PackedScene" id=2]

[sub_resource type="Image" id=17]
data = {
"data": PoolByteArray( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 203, 219, 252, 255, 203, 219, 252, 255, 203, 219, 252, 255, 203, 219, 252, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 203, 219, 252, 255, 203, 219, 252, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 203, 219, 252, 255, 203, 219, 252, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 203, 219, 252, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 203, 219, 252, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 203, 219, 252, 255, 203, 219, 252, 255, 203, 219, 252, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 203, 219, 252, 255, 203, 219, 252, 255, 203, 219, 252, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 203, 219, 252, 255, 0, 0, 0, 0, 156, 171, 202, 255, 203, 219, 252, 255, 203, 219, 252, 255, 203, 219, 252, 255, 203, 219, 252, 255, 0, 0, 0, 0, 156, 171, 202, 255, 203, 219, 252, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 203, 219, 252, 255, 0, 0, 0, 0, 156, 171, 202, 255, 0, 0, 0, 0, 156, 171, 202, 255, 0, 0, 0, 0, 156, 171, 202, 255, 0, 0, 0, 0, 156, 171, 202, 255, 203, 219, 252, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 203, 219, 252, 255, 0, 0, 0, 0, 156, 171, 202, 255, 0, 0, 0, 0, 156, 171, 202, 255, 0, 0, 0, 0, 156, 171, 202, 255, 0, 0, 0, 0, 156, 171, 202, 255, 203, 219, 252, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 203, 219, 252, 255, 0, 0, 0, 0, 156, 171, 202, 255, 0, 0, 0, 0, 156, 171, 202, 255, 0, 0, 0, 0, 156, 171, 202, 255, 0, 0, 0, 0, 156, 171, 202, 255, 203, 219, 252, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 203, 219, 252, 255, 0, 0, 0, 0, 156, 171, 202, 255, 0, 0, 0, 0, 156, 171, 202, 255, 0, 0, 0, 0, 156, 171, 202, 255, 0, 0, 0, 0, 156, 171, 202, 255, 203, 219, 252, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 203, 219, 252, 255, 0, 0, 0, 0, 156, 171, 202, 255, 0, 0, 0, 0, 156, 171, 202, 255, 0, 0, 0, 0, 156, 171, 202, 255, 0, 0, 0, 0, 156, 171, 202, 255, 203, 219, 252, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 203, 219, 252, 255, 0, 0, 0, 0, 156, 171, 202, 255, 0, 0, 0, 0, 156, 171, 202, 255, 0, 0, 0, 0, 156, 171, 202, 255, 0, 0, 0, 0, 156, 171, 202, 255, 203, 219, 252, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 203, 219, 252, 255, 0, 0, 0, 0, 156, 171, 202, 255, 0, 0, 0, 0, 156, 171, 202, 255, 0, 0, 0, 0, 156, 171, 202, 255, 0, 0, 0, 0, 156, 171, 202, 255, 203, 219, 252, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 203, 219, 252, 255, 203, 219, 252, 255, 0, 0, 0, 0, 156, 171, 202, 255, 0, 0, 0, 0, 156, 171, 202, 255, 203, 219, 252, 255, 203, 219, 252, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 203, 219, 252, 255, 203, 219, 252, 255, 203, 219, 252, 255, 203, 219, 252, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ),
"format": "RGBA8",
"height": 16,
"mipmaps": false,
"width": 16
}

[sub_resource type="ImageTexture" id=2]
image = SubResource( 17 )
size = Vector2( 16, 16 )

[sub_resource type="Image" id=18]
data = {
"data": PoolByteArray( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 203, 219, 252, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 203, 219, 252, 255, 203, 219, 252, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 203, 219, 252, 255, 203, 219, 252, 255, 203, 219, 252, 255, 203, 219, 252, 255, 203, 219, 252, 255, 203, 219, 252, 255, 203, 219, 252, 255, 203, 219, 252, 255, 203, 219, 252, 255, 203, 219, 252, 255, 203, 219, 252, 255, 203, 219, 252, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 203, 219, 252, 255, 203, 219, 252, 255, 203, 219, 252, 255, 203, 219, 252, 255, 203, 219, 252, 255, 203, 219, 252, 255, 203, 219, 252, 255, 203, 219, 252, 255, 203, 219, 252, 255, 203, 219, 252, 255, 203, 219, 252, 255, 203, 219, 252, 255, 203, 219, 252, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 203, 219, 252, 255, 203, 219, 252, 255, 203, 219, 252, 255, 203, 219, 252, 255, 203, 219, 252, 255, 203, 219, 252, 255, 203, 219, 252, 255, 203, 219, 252, 255, 203, 219, 252, 255, 203, 219, 252, 255, 203, 219, 252, 255, 203, 219, 252, 255, 203, 219, 252, 255, 203, 219, 252, 255, 0, 0, 0, 0, 0, 0, 0, 0, 203, 219, 252, 255, 203, 219, 252, 255, 203, 219, 252, 255, 203, 219, 252, 255, 203, 219, 252, 255, 203, 219, 252, 255, 203, 219, 252, 255, 203, 219, 252, 255, 203, 219, 252, 255, 203, 219, 252, 255, 203, 219, 252, 255, 203, 219, 252, 255, 203, 219, 252, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 203, 219, 252, 255, 203, 219, 252, 255, 203, 219, 252, 255, 203, 219, 252, 255, 203, 219, 252, 255, 203, 219, 252, 255, 203, 219, 252, 255, 203, 219, 252, 255, 203, 219, 252, 255, 203, 219, 252, 255, 203, 219, 252, 255, 203, 219, 252, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 203, 219, 252, 255, 203, 219, 252, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 203, 219, 252, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ),
"format": "RGBA8",
"height": 16,
"mipmaps": false,
"width": 16
}

[sub_resource type="ImageTexture" id=5]
image = SubResource( 18 )
size = Vector2( 16, 16 )

[sub_resource type="Image" id=19]
data = {
"data": PoolByteArray( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 203, 219, 252, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 203, 219, 252, 255, 203, 219, 252, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 203, 219, 252, 255, 203, 219, 252, 255, 203, 219, 252, 255, 203, 219, 252, 255, 203, 219, 252, 255, 203, 219, 252, 255, 203, 219, 252, 255, 203, 219, 252, 255, 203, 219, 252, 255, 203, 219, 252, 255, 203, 219, 252, 255, 203, 219, 252, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 203, 219, 252, 255, 203, 219, 252, 255, 203, 219, 252, 255, 203, 219, 252, 255, 203, 219, 252, 255, 203, 219, 252, 255, 203, 219, 252, 255, 203, 219, 252, 255, 203, 219, 252, 255, 203, 219, 252, 255, 203, 219, 252, 255, 203, 219, 252, 255, 203, 219, 252, 255, 0, 0, 0, 0, 0, 0, 0, 0, 203, 219, 252, 255, 203, 219, 252, 255, 203, 219, 252, 255, 203, 219, 252, 255, 203, 219, 252, 255, 203, 219, 252, 255, 203, 219, 252, 255, 203, 219, 252, 255, 203, 219, 252, 255, 203, 219, 252, 255, 203, 219, 252, 255, 203, 219, 252, 255, 203, 219, 252, 255, 203, 219, 252, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 203, 219, 252, 255, 203, 219, 252, 255, 203, 219, 252, 255, 203, 219, 252, 255, 203, 219, 252, 255, 203, 219, 252, 255, 203, 219, 252, 255, 203, 219, 252, 255, 203, 219, 252, 255, 203, 219, 252, 255, 203, 219, 252, 255, 203, 219, 252, 255, 203, 219, 252, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 203, 219, 252, 255, 203, 219, 252, 255, 203, 219, 252, 255, 203, 219, 252, 255, 203, 219, 252, 255, 203, 219, 252, 255, 203, 219, 252, 255, 203, 219, 252, 255, 203, 219, 252, 255, 203, 219, 252, 255, 203, 219, 252, 255, 203, 219, 252, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 203, 219, 252, 255, 203, 219, 252, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 203, 219, 252, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ),
"format": "RGBA8",
"height": 16,
"mipmaps": false,
"width": 16
}

[sub_resource type="ImageTexture" id=7]
image = SubResource( 19 )
size = Vector2( 16, 16 )

[sub_resource type="Image" id=20]
data = {
"data": PoolByteArray( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 153, 229, 80, 255, 153, 229, 80, 255, 153, 229, 80, 255, 153, 229, 80, 255, 153, 229, 80, 255, 153, 229, 80, 255, 153, 229, 80, 255, 153, 229, 80, 255, 153, 229, 80, 255, 153, 229, 80, 255, 153, 229, 80, 255, 153, 229, 80, 255, 153, 229, 80, 255, 153, 229, 80, 255, 153, 229, 80, 255, 153, 229, 80, 255, 153, 229, 80, 255, 153, 229, 80, 255, 153, 229, 80, 255, 153, 229, 80, 255, 153, 229, 80, 255, 153, 229, 80, 255, 153, 229, 80, 255, 153, 229, 80, 255, 153, 229, 80, 255, 153, 229, 80, 255, 153, 229, 80, 255, 153, 229, 80, 255, 153, 229, 80, 255, 153, 229, 80, 255, 153, 229, 80, 255, 153, 229, 80, 255, 153, 229, 80, 255, 153, 229, 80, 255, 153, 229, 80, 255, 153, 229, 80, 255, 153, 229, 80, 255, 153, 229, 80, 255, 153, 229, 80, 255, 153, 229, 80, 255, 153, 229, 80, 255, 153, 229, 80, 255, 153, 229, 80, 255, 153, 229, 80, 255, 153, 229, 80, 255, 153, 229, 80, 255, 153, 229, 80, 255, 153, 229, 80, 255, 153, 229, 80, 255, 153, 229, 80, 255, 153, 229, 80, 255, 153, 229, 80, 255, 153, 229, 80, 255, 153, 229, 80, 255, 153, 229, 80, 255, 153, 229, 80, 255, 153, 229, 80, 255, 153, 229, 80, 255, 153, 229, 80, 255, 153, 229, 80, 255, 153, 229, 80, 255, 153, 229, 80, 255, 153, 229, 80, 255, 153, 229, 80, 255 ),
"format": "RGBA8",
"height": 16,
"mipmaps": false,
"width": 16
}

[sub_resource type="ImageTexture" id=12]
image = SubResource( 20 )
size = Vector2( 16, 16 )

[sub_resource type="Image" id=21]
data = {
"data": PoolByteArray( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 251, 242, 54, 255, 251, 242, 54, 255, 251, 242, 54, 255, 251, 242, 54, 255, 251, 242, 54, 255, 251, 242, 54, 255, 251, 242, 54, 255, 251, 242, 54, 255, 251, 242, 54, 255, 251, 242, 54, 255, 251, 242, 54, 255, 251, 242, 54, 255, 251, 242, 54, 255, 251, 242, 54, 255, 251, 242, 54, 255, 251, 242, 54, 255, 251, 242, 54, 255, 251, 242, 54, 255, 251, 242, 54, 255, 251, 242, 54, 255, 251, 242, 54, 255, 251, 242, 54, 255, 251, 242, 54, 255, 251, 242, 54, 255, 251, 242, 54, 255, 251, 242, 54, 255, 251, 242, 54, 255, 251, 242, 54, 255, 251, 242, 54, 255, 251, 242, 54, 255, 251, 242, 54, 255, 251, 242, 54, 255, 251, 242, 54, 255, 251, 242, 54, 255, 251, 242, 54, 255, 251, 242, 54, 255, 251, 242, 54, 255, 251, 242, 54, 255, 251, 242, 54, 255, 251, 242, 54, 255, 251, 242, 54, 255, 251, 242, 54, 255, 251, 242, 54, 255, 251, 242, 54, 255, 251, 242, 54, 255, 251, 242, 54, 255, 251, 242, 54, 255, 251, 242, 54, 255, 251, 242, 54, 255, 251, 242, 54, 255, 251, 242, 54, 255, 251, 242, 54, 255, 251, 242, 54, 255, 251, 242, 54, 255, 251, 242, 54, 255, 251, 242, 54, 255, 251, 242, 54, 255, 251, 242, 54, 255, 251, 242, 54, 255, 251, 242, 54, 255, 251, 242, 54, 255, 251, 242, 54, 255, 251, 242, 54, 255, 251, 242, 54, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 251, 242, 54, 255, 251, 242, 54, 255, 251, 242, 54, 255, 251, 242, 54, 255, 251, 242, 54, 255, 251, 242, 54, 255, 251, 242, 54, 255, 251, 242, 54, 255, 251, 242, 54, 255, 251, 242, 54, 255, 251, 242, 54, 255, 251, 242, 54, 255, 251, 242, 54, 255, 251, 242, 54, 255, 251, 242, 54, 255, 251, 242, 54, 255, 251, 242, 54, 255, 251, 242, 54, 255, 251, 242, 54, 255, 251, 242, 54, 255, 251, 242, 54, 255, 251, 242, 54, 255, 251, 242, 54, 255, 251, 242, 54, 255, 251, 242, 54, 255, 251, 242, 54, 255, 251, 242, 54, 255, 251, 242, 54, 255, 251, 242, 54, 255, 251, 242, 54, 255, 251, 242, 54, 255, 251, 242, 54, 255, 251, 242, 54, 255, 251, 242, 54, 255, 251, 242, 54, 255, 251, 242, 54, 255, 251, 242, 54, 255, 251, 242, 54, 255, 251, 242, 54, 255, 251, 242, 54, 255, 251, 242, 54, 255, 251, 242, 54, 255, 251, 242, 54, 255, 251, 242, 54, 255, 251, 242, 54, 255, 251, 242, 54, 255, 251, 242, 54, 255, 251, 242, 54, 255, 251, 242, 54, 255, 251, 242, 54, 255, 251, 242, 54, 255, 251, 242, 54, 255, 251, 242, 54, 255, 251, 242, 54, 255, 251, 242, 54, 255, 251, 242, 54, 255, 251, 242, 54, 255, 251, 242, 54, 255, 251, 242, 54, 255, 251, 242, 54, 255, 251, 242, 54, 255, 251, 242, 54, 255, 251, 242, 54, 255, 251, 242, 54, 255 ),
"format": "RGBA8",
"height": 16,
"mipmaps": false,
"width": 16
}

[sub_resource type="ImageTexture" id=14]
image = SubResource( 21 )
size = Vector2( 16, 16 )

[sub_resource type="Image" id=22]
data = {
"data": PoolByteArray( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255, 172, 50, 50, 255 ),
"format": "RGBA8",
"height": 16,
"mipmaps": false,
"width": 16
}

[sub_resource type="ImageTexture" id=16]
image = SubResource( 22 )
size = Vector2( 16, 16 )

[node name="NewTask" type="Control"]
margin_right = 192.0
margin_bottom = 104.0
rect_pivot_offset = Vector2( 96, 104 )
script = ExtResource( 1 )
canimage = SubResource( 2 )
rightarrow = SubResource( 5 )
leftarrow = SubResource( 7 )
lowimp = SubResource( 12 )
medimp = SubResource( 14 )
highimp = SubResource( 16 )

[node name="TaskBack" type="ColorRect" parent="."]
margin_top = 16.0
margin_right = 192.0
margin_bottom = 104.0
color = Color( 0.72549, 0.709804, 0.74902, 1 )

[node name="TaskTitle" type="Label" parent="."]
margin_top = 16.0
margin_right = 192.0
margin_bottom = 80.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "asdfasdasdfasdfasdfahsdfhasdfhpiahsdfinaosdhnfklanslfknalksnflkansdfklnaklsdnfklankfdnlaknsdfnaksdnfklansdlkfnalks"
align = 1
valign = 1
autowrap = true
clip_text = true

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 192.0
margin_bottom = 16.0
color = Color( 1, 0.662745, 0.662745, 1 )

[node name="PopupMenu" type="PopupMenu" parent="."]
margin_right = 20.0
margin_bottom = 20.0

[node name="MoveTaskMenu" type="PopupMenu" parent="PopupMenu"]
margin_right = 20.0
margin_bottom = 20.0

[node name="ImportanceIcon" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 168.0
margin_top = 80.0
margin_right = -8.0
margin_bottom = -8.0

[node name="RequirementsControl" parent="." instance=ExtResource( 2 )]
visible = false
